[gd_scene load_steps=2 format=2]

[ext_resource path="res://Abandoned and Old Files/LevelTimer.gd" type="Script" id=1]

[node name="Timer" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 304.0
margin_top = 112.0
margin_right = 316.0
margin_bottom = 132.0
text = "Start"

[node name="Button2" type="Button" parent="."]
margin_left = 288.0
margin_top = 176.0
margin_right = 300.0
margin_bottom = 196.0
text = "Stop"

[node name="Button3" type="Button" parent="."]
margin_left = 296.0
margin_top = 248.0
margin_right = 308.0
margin_bottom = 268.0
text = "Reset"

[node name="Button4" type="Button" parent="."]
margin_left = 464.0
margin_top = 248.0
margin_right = 512.0
margin_bottom = 268.0
text = "Record"

[node name="Label" type="Label" parent="."]
margin_left = 288.0
margin_top = 40.0
margin_right = 328.0
margin_bottom = 54.0

[node name="Label2" type="Label" parent="."]
margin_left = 464.0
margin_top = 192.0
margin_right = 504.0
margin_bottom = 206.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
